[tool.poetry]
name = "replit.ai"
version = "0.0.0"
description = "A library for interacting with AI features of replit"
authors = ["Repl.it <contact@repl.it>"]
license = "ISC"
readme = "README.md"
repository = "https://github.com/replit/replit-py-ai"
homepage = "https://github.com/replit/replit-py-ai"
documentation = "https://replit-py-ai.readthedocs.org/"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Operating System :: OS Independent",
]
packages = [
  { include = "replit", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
replit = "replit.__main__:cli"

[tool.mypy]
exclude = [
	"_pb2.py$",  # Generated code
]
