[tool.poetry]
name = "replit.ai"
version = "0.0.6"
description = "A library for interacting with AI features of replit"
authors = ["Repl.it <contact@repl.it>"]
license = "ISC"
readme = "README.md"
repository = "https://github.com/replit/replit-ai-python"
homepage = "https://github.com/replit/replit-ai-python"
documentation = "https://replit-ai-python.readthedocs.org/"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Operating System :: OS Independent",
]
packages = [
  { include = "replit", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.8.0"
requests = "^2.31.0"
pydantic = "^2.3.0"
aiohttp = "^3.8.5"
pytest-asyncio = "^0.21.1"


[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true


[tool.poetry.dev-dependencies]
Flask = "^2.2.0"
pytest = "^7.4.1"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
replit = "replit.__main__:cli"

[tool.mypy]
exclude = [
	"_pb2.py$",  # Generated code
]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']